<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        app:cardElevation="16dp"
        app:cardBackgroundColor="@color/pink_bg"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_width="match_parent"
        android:layout_height="180dp"/>

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card"/>

    <TextView
        app:layout_constraintEnd_toStartOf="@+id/sos_img"
        app:layout_constraintTop_toBottomOf="@id/text_sos"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        android:id="@+id/sos_msg"
        android:layout_margin="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:text="@string/in_case_of_emergency_keep_telling_members_to_contact_me"
        android:textColor="@color/white" />
    <ImageView
        android:id="@+id/sos_img"
        android:src="@drawable/sos"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        android:elevation="16dp"
        android:layout_margin="16dp"
        android:layout_width="96dp"
        android:layout_height="96dp"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        app:cardBackgroundColor="@color/green_bg"
        app:cardElevation="16dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"/>

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card"/>

    <TextView
        app:layout_constraintEnd_toStartOf="@+id/guard_img"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        app:layout_constraintStart_toStartOf="@id/green_card"
        android:id="@+id/guard_msg"
        android:layout_margin="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:text="@string/open_when_you_are_on_potentially_dangerous_journey"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/guard_img"
        android:src="@drawable/guard"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        android:elevation="16dp"
        android:layout_margin="16dp"
        android:layout_width="96dp"
        android:layout_height="96dp"/>

    <EditText
        android:id="@+id/invite_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Enter Email of whome you want to invite"
        app:layout_constraintBottom_toBottomOf="@+id/send_invite"
        app:layout_constraintEnd_toStartOf="@+id/send_invite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/send_invite"/>

    <Button
        android:id="@+id/send_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/green_card"/>

    <TextView
        android:id="@+id/your_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Your Invites"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invite_mail"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invite_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_invites"
        tools:listitem="@layout/item_invite_mail" />


</androidx.constraintlayout.widget.ConstraintLayout>